--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "sass": "^1.58.3",
     "vite": "^4.1.0",
-    "vite-plugin-html-purgecss": "^0.1.1"
+    "vite-plugin-html-purgecss": "^0.1.1",
+    "vite-plugin-purgecss": "^0.2.12"
   }
 }
